.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/aa_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>aa_Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Client Withdrew</fullName>
            </value>
            <value>
                <fullName>Nurse Withdrew</fullName>
            </value>
            <value>
                <fullName>Unable to Meet Compliance</fullName>
            </value>
            <value>
                <fullName>Nurse / Facility issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>