.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/aa_Guarantee_Date__c.field-meta.xml
<CustomField>
    <fullName>aa_Guarantee_Date__c</fullName>
    <label>Guarantee Date</label>
    <type>Date</type>
</CustomField>