.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/aa_Legacy_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>aa_Legacy_Job_ID__c</fullName>
    <label>Legacy Job ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>