.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Accommodation_contact_details__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_contact_details__c</fullName>
    <inlineHelpText>Are you the best person to contact for accommodation details?</inlineHelpText>
    <label>Accommodation contact details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>