.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Accomodation_Details__c.field-meta.xml
<CustomField>
    <fullName>Accomodation_Details__c</fullName>
    <inlineHelpText>Is accommodation included in the placement fee?</inlineHelpText>
    <label>Accomodation Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>