.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Additional_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Documentation__c</fullName>
    <inlineHelpText>Please attach any additional information/documents that you would like us to send to the nurse prior to commencement.</inlineHelpText>
    <label>Additional Documentation</label>
    <type>TextArea</type>
</CustomField>