.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>