.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Collect_Nurse_Upon_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Collect_Nurse_Upon_Arrival__c</fullName>
    <inlineHelpText>If applicable, is it possible to collect the nurse upon arrival?</inlineHelpText>
    <label>Collect Nurse Upon Arrival</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>