.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Contract_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fee_Amount__c</fullName>
    <label>Contract Fee Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>