.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Date_of_First_Shift__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Shift__c</fullName>
    <label>Date of First Shift</label>
    <type>Date</type>
</CustomField>