.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Doc_Gen_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Doc_Gen_Company_Name__c</fullName>
    <formula>TR1__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc_Gen Company Name</label>
    <type>Text</type>
</CustomField>