.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Est_accomodation_allowance__c.field-meta.xml
<CustomField>
    <fullName>Est_accomodation_allowance__c</fullName>
    <label>Est. accomodation allowance</label>
    <type>TextArea</type>
</CustomField>