.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Est_Travel_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Est_Travel_Allowance__c</fullName>
    <label>Est, Travel Allowance</label>
    <type>TextArea</type>
</CustomField>