.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <inlineHelpText>Facility Name</inlineHelpText>
    <label>Facility Name</label>
    <type>TextArea</type>
</CustomField>