.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Fee_Created__c.field-meta.xml
<CustomField>
    <fullName>Fee_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True/Checked if Invoiceable Fee created.</inlineHelpText>
    <label>Fee Created</label>
    <type>Checkbox</type>
</CustomField>