.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Fee_for_Service_Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>Fee_for_Service_Rate_Details__c</fullName>
    <formula>&quot;Award Classification: &quot; &amp; TR1__Job__r.s5m__JobRole__r.tc9_ext_sirint__Award_Classification__r.Name &amp; BR() &amp;
 &quot;Rate Template Group: &quot; &amp; TR1__Job__r.s5m__JobRole__r.Rate_Template_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee for Service Rate Details</label>
    <type>Text</type>
</CustomField>