.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Number_of_Fees_Created__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Fees_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of Daily contract fees (per week) created</inlineHelpText>
    <label>Number of Fees Created</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>