.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Orientation_Shift__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Shift__c</fullName>
    <inlineHelpText>Is this an orientation shift?</inlineHelpText>
    <label>Orientation Shift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>