.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Preferred_type_of_accomodation__c.field-meta.xml
<CustomField>
    <fullName>Preferred_type_of_accomodation__c</fullName>
    <label>Preferred type of accomodation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site accommodation</fullName>
            </value>
            <value>
                <fullName>hotel</fullName>
            </value>
            <value>
                <fullName>hostel</fullName>
            </value>
            <value>
                <fullName>Airbnb</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>