.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Supervisor_performance_purposes__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_performance_purposes__c</fullName>
    <inlineHelpText>Are you the supervisor to contact for performance appraisal purposes?</inlineHelpText>
    <label>Supervisor performance purposes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>