.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Time_of_First_Shift__c.field-meta.xml
<CustomField>
    <fullName>Time_of_First_Shift__c</fullName>
    <label>Time of First Shift</label>
    <type>TextArea</type>
</CustomField>