.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Timesheet_Approval__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approval__c</fullName>
    <inlineHelpText>Are you the supervisor to contact for performance appraisal purposes?</inlineHelpText>
    <label>Timesheet Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>