.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Travel_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Travel_Allowance__c</fullName>
    <inlineHelpText>Travel Allowance included in the placement fee?</inlineHelpText>
    <label>Travel Allowance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>