.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Travel_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Travel_Arrangements__c</fullName>
    <inlineHelpText>Do you require the agency or facility to arrange travel for your placement?</inlineHelpText>
    <label>Travel Arrangements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>