.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Travel_Contact_Details_No__c.field-meta.xml
<CustomField>
    <fullName>Travel_Contact_Details_No__c</fullName>
    <inlineHelpText>Who is the best person to contact?</inlineHelpText>
    <label>Travel Contact Details - No</label>
    <type>TextArea</type>
</CustomField>