.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Travel_on_your_own__c.field-meta.xml
<CustomField>
    <fullName>Travel_on_your_own__c</fullName>
    <inlineHelpText>Will you be travelling on your own or with company?</inlineHelpText>
    <label>Travel on your own</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On my own</fullName>
            </value>
            <value>
                <fullName>With Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>