.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Travel_to__c.field-meta.xml
<CustomField>
    <fullName>Travel_to__c</fullName>
    <inlineHelpText>Where are you travelling to?</inlineHelpText>
    <label>Travel to</label>
    <type>TextArea</type>
</CustomField>