.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/X2c9_Assignment__c.field-meta.xml
<CustomField>
    <fullName>X2c9_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2c9 Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>