.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/fields/Your_Name__c.field-meta.xml
<CustomField>
    <fullName>Your_Name__c</fullName>
    <label>Your Name</label>
    <type>TextArea</type>
</CustomField>