.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>Contract Close</description>
    <label>Contract</label>
</RecordType>