.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/recordTypes/Fee_for_Service.recordType-meta.xml
<RecordType>
    <fullName>Fee_for_Service</fullName>
    <active>true</active>
    <description>Fee for Service Weekly</description>
    <label>FFS - Weekly</label>
</RecordType>