.vscode/allianceuat_compare/force-app/main/default/objects/TR1__Closing_Report__c/recordTypes/FFS_Daily.recordType-meta.xml
<RecordType>
    <fullName>FFS_Daily</fullName>
    <active>true</active>
    <description>Fee for Service Daily</description>
    <label>FFS - Daily</label>
</RecordType>